board fixed overlaySubtask implementaion, alignments

--- a/board.css
+++ b/board.css
@@ -194,9 +194,7 @@ button {
     position: absolute;
     top: 0;
     left: 0;
-    /* height: 1024px; */
     height: 100%;
-    /* width: 1440px; */
     width: 100%;
     background: rgba(0, 0, 0, 0.25);
 }
@@ -356,17 +354,6 @@ button {
 
     .emptyTask {
         margin: 8px;
-    }
-
-    .scroll-container {
-        /* overflow-x: scroll; */
-        /* overflow-y: hidden; */
-        /* white-space: nowrap; */
-        cursor: grab;
-    }
-
-    .scroll-container::-webkit-scrollbar {
-        display: none;
     }
 
     .searchBar {
